# origin

./: .gitignore  README.md  conftest.py  pyproject.toml  requirements.txt
dev/: Show.json
docs/: Applications.md  Build.md  Environment.md  Package.md  Publishing.md  Resolve.md  caching.md
envereal/: Environment.json  Package.json  environment.py
example_environment/: Environment.json  environment.yaml
example_package/hello_world/: Package.json  README.md  hello_world.py  package.yaml
gui/: EnvironmentGui.py  __main__.py  browser.py  components.py  environment_gui.py  origin.qss  publisher.py  style.py  worker.py
origin/: Environment.json  Package.json  __init__.py  application.py  caching.py  config.py  environment.py  git_utils.py  launch.py  publish.py
package/: Show.json  environment.py  runtime.py
tests/: helpers.py  test_application.py  test_build.py  test_caching.py  test_environment.py  test_git_utils.py  test_launch.py
